[package]
name = "trianglesay"
version = "0.1.0"
authors = ["Vazpera"]
license = "MIT"
description = "A cowsay clone based on Kuvina Saydaki's videos"
readme = "README.md"
homepage = "https://github.com/vazpera/trianglesay"
repository = "https://github.com/vazpera/trianglesay"
keywords = ["cli"]
categories = ["command-line-utilities"]

[profile.release]
strip = true
codegen-units = 1
opt-level = "z"
[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
